# nvidia-nat-agent-demo

./: .env.example  .gitignore  AGENTS.md  HANDOFF.md  README.md  TECHNICAL_NOTES.md  TECHNICAL_SHEET.md  config.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: react_climate.yml  react_climate_phoenix.yml
docs/: nat-phoenix-observability-lesson.md  nat-react-tools-lesson.md
scripts/: bootstrap_ui.sh  run_climate_workflow.sh  run_react_demo.sh  serve_backend.sh  serve_phoenix.sh  serve_react_backend.sh  serve_ui.sh  validate_local.sh
src/training_nvidia_nat/: __init__.py  __main__.py  climate.py  main.py  register.py
src/training_nvidia_nat/data/: temperature_annual.csv
tests/: test_climate.py  test_main.py
